--- a/client/css/game.css
+++ b/client/css/game.css
@@ -721,8 +721,9 @@ i {
     }
 }
 
-
-/* Users playing + Users Summary */
+/* ==========================================================================
+   Players List
+   ========================================================================== */
 
 .players {
     height: 100%;
@@ -777,34 +778,45 @@ i {
 }
 
 
-/* Users playing */
 .users-playing td, .users-playing th, .users-summary td, .users-summary th {
     padding-left: 6px;
     max-width: 3rem;
 }
-.user-won td,
-.user-won td a {
+
+/* Playing/Lost/Cashed/Won Colors
+   ========================================================================== */
+
+tr.user-won.me {
+    background-color: rgba(12, 203, 30, .2);
+}
+.user-won td, .user-won td a {
     color: #408609;
 }
 
-.user-lost td,
-.user-lost td a {
+tr.user-lost.me {
+    background-color: rgba(224, 62, 62, .2);
+}
+.user-lost td, .user-lost td a {
     color: #e03e3e;
 }
 
-/* Users Summary */
-
-.user-playing td,
-.user-playing td a {
+tr.user-playing.me {
+    background-color: rgba(255, 129, 0 , .2);
+}
+.user-playing td, .user-playing td a {
     color: #ff8100;
 }
 
-.user-cashed td,
-.user-cashed td a {
+tr.user-cashed.me {
+    background-color: rgba(12, 203, 30, .2);
+}
+.user-cashed td, .user-cashed td a {
     color: #408609;
 }
 
-/* Games log */
+/* ==========================================================================
+   Games Log
+   ========================================================================== */
 
 .games-log{ /* table */
     height: 100%;
@@ -857,7 +869,9 @@ i {
 }
 
 
-/* Tabs */
+/* ==========================================================================
+   Tabs
+   ========================================================================== */
 
 .log-chat-tabs-container {
     position: relative;
@@ -1014,10 +1028,16 @@ i {
    BetBar
    ========================================================================== */
 
+.bet-bar-starting {
+    width: 100%;
+    height: .3em;
+    background-color: #ff8100;
+}
+
 .bet-bar-container {
     width: 100%;
     height: .3em;
-    background-color: #007ba4;
+    background-color: #ffffff;
 }
 
 .bet-bar-playing, .bet-bar-lost, .bet-bar-me-won, .bet-bar-me-lost, .bet-bar-me-playing, .bet-bar-me-cashed, .bet-bar-cashed, .bet-bar-won {
@@ -1027,27 +1047,27 @@ i {
 
 /* Colors for the players playing and lost */
 .bet-bar-playing {
-    background-color: #b75f17;
+    background-color: #ff8100;
 }
 
 .bet-bar-lost {
-    background-color: #a30400;
+    color: #e03e3e;
 }
 
 /* Colors for the player */
 .bet-bar-me-lost {
-    background-color: #e60400;
+    background-color: rgba(224, 62, 62, .2);
 }
 
 .bet-bar-me-playing {
-    background-color: #e58203
+    background-color: rgba(255, 129, 0 , .2);
 }
 
 .bet-bar-me-won, .bet-bar-me-cashed {
-    background-color: #0ccb03;
+    background-color: rgba(12, 203, 30, .2);
 }
 
 /* Colors for the players cashed and won */
 .bet-bar-cashed, .bet-bar-won {
-    background-color: #338628;
+    background-color: #408609;
 }
