Fix css bet bar error

--- a/client/css/game.css
+++ b/client/css/game.css
@@ -1051,7 +1051,7 @@ tr.user-cashed.me {
 }
 
 .bet-bar-lost {
-    color: #e03e3e;
+    background-color: #e03e3e;
 }
 
 /* Colors for the player */
