--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -42,11 +42,15 @@
         <div class="small-10 columns sets-content">
             <h4>Request A Withdrawal</h4>
             <p class="small">
-                **The minimal amount for a withdrawal is 200 bits. You will receive 100 bits less than what you withdraw,
+                **The minimum amount for a withdrawal is 200 bits. You will receive 100 bits less than what you withdraw,
                 as we use that 100 bits to go towards mining fee. As required, we will as well chip in with our money to
                 help expedite confirmation time.
             </p>
 
+            <p>
+                <strong>Note:</strong> Your withdrawal will be sent from the hot wallet, do not withdraw to any site
+                that uses the sending address, or returns to sender, because any returns will probably be credited to a different player.
+            </p>
             <form action="/withdraw-request" method="post">
                 <label for="amount">Bits amount</label>
                 <input type="number" id="amount" name="amount" placeholder="200" min="200" required/>
