Show hash instead of seed in game details

--- a/views/game.html
+++ b/views/game.html
@@ -54,7 +54,7 @@
             {{~}}
           </tbody>
         </table>
-        <h6><b>Seed:</b> <a href="/faq#fair">{{=it.game.seed}}</a></h6>
+        <h6><b>Hash:</b> <a href="/faq#fair">{{=it.game.hash}}</a></h6>
     </div>
 
 #}}
