--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
                     <h4>Secure</h4>
                     <p class="text">
                         Offline storage<br>
-                        <a href="faq#fair">Provably predetermined</a><br>
+                        <a href="faq#fair">Provably fair</a><br>
                         Razor thin <a href="faq#odds">house edge</a> (between 0 and 1%)
                     </p>
                 </div>
