--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -11,6 +11,7 @@
     font-size: 1rem;
     height: 253px;
     padding: 2px 3px;
+    resize: vertical;  /* Allow user to resize element */
 }
 
 .chat-input {
