--- a/views/error.html
+++ b/views/error.html
@@ -17,8 +17,14 @@
         </div>
         <div class="large-11 columns">
             <h4>Something bad happened. My humans are working to fix this mess, please come back later...</h4>
+            <br/>
+            {{?it.error}}
+            <h6>Error: {{=it.error}}</h6>
+            {{?}}
         </div>
     </div>
 </div>
 </body>
 </html>
+
+
