Add the bitcoin strip to FAQ

--- a/views/faq.html
+++ b/views/faq.html
@@ -254,11 +254,14 @@
             <dd>
                 <b><a name="other"></a>What other gambling places do you recommend?</b>
                 <p>
-                    We would recommend dice sites, which offer very low house edges (normally 1%) compared
-                    to typical casino games which can range from 3% to 30%. Compared to Money Pot dice sites
-                    lack an element of skill, but offer better provably fair guarantees as well as often allowing you to
-                    invest in the house (+EV, at the expense of counter party risk). A good list of
-                    <a href="http://dicesites.com/">dice sites</a> is available.
+                    A couple quick pointers: the lower the house edge the more variance you will experience
+                    which means a longer, more exciting gaming session. Bitcoin Casinos generally offer better odds, less fees
+                    and faster deposits and withdrawals than fiat based casinos. Be extremely skeptical of generous
+                    reward programs, bonuses (e.g. deposit bonuses), affiliate programs and the likes. The money comes from
+                    somewhere: you.
+                </p>
+                <p>
+                    Instead of listing our favorites here, we'll defer to the excellent <a href="https://thebitcoinstrip.com/">bitcoin strip</a>
                 </p>
             </dd>
             <dd>
