--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -53,7 +53,7 @@
             </p>
             <form action="/withdraw-request" method="post">
                 <label for="amount">Bits amount</label>
-                <input type="number" id="amount" name="amount" placeholder="200" min="200" required/>
+                <input type="number" id="amount" name="amount" placeholder="200" min="200" step=".01" required/>
                 <label for="destination">Destination Address</label>
                 <input type="text" id="destination" name="destination" required/>
                 <label for="password">Your password</label>
@@ -64,6 +64,7 @@
                 {{?}}
                 <a href="/withdraw" class="border-button ">Back</a>
                 <input class="border-button right blue" type="submit"/>
+                <input type="hidden" name="withdrawal_id" value="{{= it.id}}" />
             </form>
         </div>
     </div>
