Rebranding to bustabit

--- a/views/bitcoin-gambling.html
+++ b/views/bitcoin-gambling.html
@@ -53,7 +53,7 @@
     <p>Bitcoin is tied neither a country nor other currency and as such bitcoin gambling establishments are almost universally
         global, and as such compete for a global audience. Because of their dramatically reduced cost structure, they are
         able to compete by offering razor-thin house odds. It is quite typical to find house odds between 0.5 % and 1 %–while a physical casino will have often have games with house odds beyond 15 %. Certain games like
-        <a href="https://www.moneypot.com/">Money Pot</a> offer variable odds, where small wagers, which do not add much
+        <a href="https://www.bustabit.com/">bustabit</a> offer variable odds, where small wagers, which do not add much
         variance for the company, can play with house odds as low as 0.1 % (although they may be scaled upwards for larger and thus riskier bets).
         </p>
 
@@ -64,7 +64,7 @@
         Dice games allow the gambler to customize their bet size and how much they want to win–and the game calculates
         a fair probability for them, so that the more they stand to win, the less chance they have of doing so. Because
         the traditional barriers to entry are removed, a lot of unique games are only available to play with bitcoin
-        (such as MoneyPot).
+        (such as bustabit).
     </p>
 </div>
 
