--- a/views/game.html
+++ b/views/game.html
@@ -4,7 +4,7 @@
     <div class="row panel radius">
         <h4>Game #<strong>{{=it.game.id}}</strong> information</h4>
         <p>
-            <b>Crashed At: </b> {{#def.format: { n: it.game.game_crash, decimals: 2 } }}x
+            <b>Busted At: </b> {{#def.format: { n: it.game.game_crash, decimals: 2 } }}x
         </p>
         <p>
             <b>Played: </b>{{=it.game.created}} <small>{{=it.game.timeago}}</small>
