--- a/views/guide.html
+++ b/views/guide.html
@@ -5,18 +5,18 @@
     <h3>Strategy Guide</h3>
     <hr>
     <p>
-        <b>Money Pot</b> is a game of 99% luck, but 1% skill. This means that if you play in a strategy-oblivious way, you'll
+        <b>Bustabit</b> is a game of 99% luck, but 1% skill. This means that if you play in a strategy-oblivious way, you'll
         not do too bad. But with a good enough strategy, it's actually possible to overcome the house odds, and even make
         a profit.
 
     </p>
     <p><b>Here's how it works:</b></p>
 
-    <h4>Instant Crash</h4>
+    <h4>Instabust</h4>
     <p>
-        Right off the bat, there's a <b>1%</b> chance of the game instantly crashing. If this happens, no one can win anything.
-        This means moneypot.com has an expected return of <code>1% * playersInGame * tableAmount</code>. This is the <b>exact amount</b>
-        money pot uses to give out bonuses.
+        Right off the bat, there's a <b>1%</b> chance of the game instantly busting. If this happens, no one can win anything.
+        This means bustabit.com has an expected return of <code>1% * playersInGame * tableAmount</code>. This is the <b>exact amount</b>
+        bustabit uses to give out bonuses.
     </p>
 
     <h4>House Edge</h4>
@@ -27,8 +27,8 @@
 
     <h4>Bonuses</h4>
     <p>
-        The last person to <b>cash out</b> before a crash gets a bonus, which on average is exactly the same as the server makes
-        from the instant crash <a href="/faq#bonusfunded">see: faq</a>. Strategic play revolves completely around trying to get this bonus. If no one
+        The last person to <b>cash out</b> before a bust gets a bonus, which on average is exactly the same as the server makes
+        from the instabust <a href="/faq#bonusfunded">see: faq</a>. Strategic play revolves completely around trying to get this bonus. If no one
         collects the bonus, it <b>rolls to the next game.</b>
     </p>
 
