--- a/views/index.html
+++ b/views/index.html
@@ -84,7 +84,7 @@
                         </div>
                         <h4>Real Time</h4>
                         <p class="text">
-                            Watch your fortune rise (or crash) in real time
+                            Watch your fortune build or bust in real time
                         </p>
                     </div>
                 </div>
