--- a/views/stats.html
+++ b/views/stats.html
@@ -4,7 +4,7 @@
     <div class="content row panel radius">
         <div class="row">
             <div class="large-6 columns">
-                <h5>MoneyPot.com Statistics</h5>
+                <h5>Bustabit.com Statistics</h5>
                 <small>Generated {{! it.generated }}</small>
                 <table class="stats">
                     <tbody>
