--- a/views/template/head.html
+++ b/views/template/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>{{# def.page_title || 'Social Bitcoin Gambling' }} -- MoneyPot.com</title>
+    <title>{{# def.page_title || 'Social Bitcoin Gambling' }} -- Bustabit.com</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <meta charset="utf-8" />
