--- a/views/template/header.html
+++ b/views/template/header.html
@@ -3,8 +3,7 @@
 
             <div class="title">
                 <a href="/">
-                    <img src="/img/logo.png" alt="logo" width="40px" />
-                    <h1 class="hide-for-small-only">MoneyPot.com</h1>
+                    <h1 class="hide-for-small-only">bustabit</h1>
                 </a>
             </div>
 
