--- a/views/template/main.html
+++ b/views/template/main.html
@@ -21,13 +21,13 @@
             </div>
         {{??it.user.advice == 'new'}}
         <div class="success">
-            Welcome to MoneyPot, to start you have 2 free bits, bits
+            Welcome to bustabit.com, to start you have 2 free bits, bits
             <a href="/request">you can request them here</a> or you can just watch the current games... have fun :D
 
         </div>
         {{??it.user.advice == 'received'}}
         <div class="success">
-            Congratulations you have been credited 2 free bits. Join a table, and have some fun!
+            Congratulations you have been credited 2 free bits. Have fun!
         </div>
         {{?? it.user.advice}}
         <div class="success">
