--- a/client/css/header.css
+++ b/client/css/header.css
@@ -32,10 +32,10 @@
 .title h1, .title a {
     color: black;
     font-size: 25px;
-    font-family: rbn;
+    font-family: "Courier New";
     font-weight: 700;
-    text-shadow: 0px 2px 2px rgba(5,2,0,0.4);
     text-decoration: none;
+    padding-left: 5px;
 }
 
 .table-title {
