--- a/views/faq.html
+++ b/views/faq.html
@@ -21,7 +21,7 @@
                 <li><a href="#limit">What is the most I can bet?</a></li>
                 <li><a href="#last">What is the bonus?</a></li>
                 <li><a href="#odds">What are the game odds?</a></li>
-                <li><a href="#crash-point">How is the game crash calculated?</a></li>
+                <li><a href="#crash-point">How is the game bust calculated?</a></li>
                 <li><a href="#fair">Is the game fair?</a></li>
                 <li><a href="#force">What happens when the server forces people to cash out?</a></li>
                 <li><a href="#other">What other gambling places do you recommend?</a></li>
@@ -45,7 +45,7 @@
                 <b><a name="how-to-play"></a>How to play?</b>
                 <p>
                     Place a bet. Watch the multiplier increase from 1x upwards! Cash out any time to get your bet
-                    multiplied by that multiplier. But be careful because the game can crash at any time, and you'll get nothing!
+                    multiplied by that multiplier. But be careful because the game can bust at any time, and you'll get nothing!
                 </p>
             </dd>
             <dd>
@@ -142,8 +142,8 @@
             <dd>
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
-                    The bonus is a special prize that is awarded to the last people to cash out before the game crashes. Getting the bonus
-                    is critical to skillful playing of MoneyPot, as it is the <strong>only</strong> way to overcome house odds.
+                    The bonus is a special prize that is awarded to the last people to cash out before the game busted. Getting the bonus
+                    is critical to skillful playing of bustabit, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
                 <p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 bits in the pot.
                     If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 bits bet gives 10 bits bonus
@@ -159,7 +159,7 @@
                     Suppose the 300 bit player comes 3rd. He's due 7.5 bits (300/40) but there are only 2.5 bits left in the pot, so he gets those and that's all. There's nothing left for the 4th or worse place players.
                 </p>
                 <p>
-                    1% of games will instant crash (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.
+                    1% of games will instant bust (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.
                 </p>
             </dd>
             <h3>Fairness</h3>
@@ -184,19 +184,19 @@
                     But to really get a good sense of how this affects you, please use our handy <a href="/calculator">odds calculator</a>.
                 </p>
                 <p>
-                    The other important thing to keep in mind is that every game has a 1 % chance of instantly crashing. We do not make
+                    The other important thing to keep in mind is that every game has a 1 % chance of instantly busting. We do not make
                     <strong>any</strong> money on it, but rather use this to fund the bonus scheme. This is an important consideration to make if you
                     are playing in such a way that you never win the bonus.
                 </p>
                 <img src="/img/house-edge.png">
             </dd>
             <dd>
-                <b><a name="crash-point"></a>How is the game crash calculated?</b>
+                <b><a name="crash-point"></a>How is the game bust calculated?</b>
                 <p>
                     The code that decides the multiplier for each round is here:
                 </p>
                 <p>
-                    <a href="https://github.com/moneypot/gameserver/blob/master/server/lib.js#L146-L158">https://github.com/moneypot/gameserver/blob/master/server/lib.js#L146-L158</a>
+                    <a href="https://github.com/moneypot/bustabit-gameserver/blob/master/server/lib.js#L146-L158">https://github.com/moneypot/gameserver/blob/master/server/lib.js#L146-L158</a>
                 </p>
                 <p>
                     It basically does three things.
@@ -205,7 +205,7 @@
                     First, it mixes the hash with the clientSeed (decided by the provably fair seeding event) using hmac-sha256
                 </p>
                 <p>
-                    Secondly it gives a 1 in 101 chance of instant crashing
+                    Secondly it gives a 1 in 101 chance of instant busting
                 </p>
                 <p>
                     Third, it works out what the multiplier would be if there was no
@@ -215,13 +215,13 @@
                     Fourth, it takes 1% off the multiplier and adds on 0.01x:
                 </p>
                 <p>
-                    So half the time (other than 0x crashes which we can ignore because
+                    So half the time (other than 0x bust which we can ignore because
                     they pay for themselves with the bonus) the multiplier will be 1.99x
                     or more.
                 </p>
                 <p>
                     That means if we bet 1.99x we have a 50% chance of winning (again,
-                    ignoring 0x crashes), and so the house edge is:
+                    ignoring 0x busts), and so the house edge is:
                 </p>
                 <p>
                     <code>100 - (1.99 * 50) = 100 - 99.5 = 0.5%</code>
