--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,17 @@
 {{##def.page_title = 'Login' #}}
 
 {{##def.content:
+<script src='https://www.google.com/recaptcha/api.js'></script>
+<script>
+  function enableSubmit() {
+    var s = document.getElementById('loginSubmit');
+    s.style.display = 'block';
+  }
+
+
+</script>
+
+
 <div class="login">
     <form action="/login" method="post">
         <div class="row">
@@ -9,16 +20,24 @@
                     <input type="text" name="username" required/>
                 </label>
             </div>
+        </div>
+         <div class="row">
             <div class="large-12 columns">
                 <label>Password
                     <input type="password" name="password" required />
                 </label>
             </div>
+         </div>
+         <div class="row">
+            <div class="g-recaptcha" data-sitekey="6LeIdP0SAAAAAGzl61UDdE8rWr-qRqzrL0o4szRJ" data-callback="enableSubmit"></div>
+         </div>
+         <div class="row">
             <div class="large-12 columns">
                 <a class="small" href="/forgot-password">Forgot your password?</a>
-                <input class="border-button right blue" type="submit" value="Login"/>
+                <input id="loginSubmit" style="display: none" class="border-button right blue" value="Login" type="submit" />
             </div>
         </div>
+
     </form>
 </div>
 
